--- a/app/src/main/res/menu/tab_menu.xml
+++ b/app/src/main/res/menu/tab_menu.xml
@@ -5,23 +5,27 @@
     <item
         android:id="@+id/tabMode"
         android:icon="@drawable/ic_baseline_settings_24"
-        app:showAsAction="ifRoom"
+        android:title=""
+
         />
     <item
         android:id="@+id/tabMode1"
         android:icon="@drawable/ic_baseline_currency_exchange_24"
-        android:menuCategory="alternative"
-        app:showAsAction="ifRoom"
+        android:title=""
         />
+    <item
+        android:id="@+id/placeholder"
+        android:title="" />
+
     <item
         android:id="@+id/tabMode2"
         android:icon="@drawable/ic_baseline_view_module_24"
-        app:showAsAction="ifRoom"
+        android:title=""
         />
     <item
         android:id="@+id/tabMode3"
         android:icon="@drawable/ic_baseline_location_on_24"
-        app:showAsAction="ifRoom"
+        android:title=""
         />
 
 </menu>
