--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
 
     <com.google.android.material.card.MaterialCardView
@@ -24,125 +24,134 @@
             android:layout_height="match_parent"
             android:background="#80ffffff">
 
-            <TextView
-                android:id="@+id/tv_text"
+            <ImageView
+                android:id="@+id/image_text"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_margin="8dp"
-                android:text="@string/Location"
-                android:fontFamily="sans-serif-medium"
-                android:paddingHorizontal="102dp"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:src="@drawable/task1"
+                android:background="@color/MyCollor"
                 app:layout_constraintBottom_toTopOf="@+id/edit_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/edit_text"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_margin="24dp"
-                android:gravity="center"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/radius"
-                android:textStyle="bold"
+                android:gravity="center"
                 android:hint="@string/Street"
                 android:textSize="28dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_text" />
+                app:layout_constraintTop_toBottomOf="@+id/image_text" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cardPhoto"
-        android:layout_width="380dp"
-        android:layout_height="246dp"
+
+    <FrameLayout
+        android:id="@+id/cardPhotossss"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:cardBackgroundColor="@color/white"
+        android:orientation="vertical"
         app:cardCornerRadius="17dp"
         app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card">
 
-<androidx.appcompat.widget.LinearLayoutCompat
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/radius"
-    android:orientation="vertical"
-    android:layout_margin="12dp">
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/largeLabel"
-        android:layout_width="match_parent"
-        android:background="@drawable/radius"
-        android:layout_height="40dp">
-
-        <TextView
-            android:id="@+id/tv_tex"
-            android:layout_width="220dp"
-            android:layout_height="match_parent"
-            android:text="@string/Street"
-           android:layout_marginVertical="8dp"
-            android:layout_marginStart="16dp"/>
-
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_add"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:text="+"
-            android:layout_marginLeft="70dp"
-            android:textColor="@color/white"
-            app:backgroundTint="@color/black"
-            android:background="@drawable/btnoval"
-            app:cornerRadius="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardPhoto"
+            android:layout_width="380dp"
+            android:layout_height="246dp"
+            android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="17dp"
+            app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_photo" />
+            app:layout_constraintTop_toBottomOf="@+id/card">
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="12dp"
+                android:background="@drawable/radius"
+                android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_photo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/item_photo"/>
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/largeLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@drawable/radius">
+
+                    <TextView
+                        android:id="@+id/tv_tex"
+                        android:layout_width="220dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="8dp"
+                        android:layout_marginStart="16dp"
+                        android:text="@string/Street" />
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_add"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="70dp"
+                        android:background="@drawable/btnoval"
+                        android:text="+"
+                        android:textColor="@color/white"
+                        app:backgroundTint="@color/black"
+                        app:cornerRadius="15dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/image_photo" />
 
-    </com.google.android.material.card.MaterialCardView>
->
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0"
+                    tools:listitem="@layout/item_photo" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </com.google.android.material.card.MaterialCardView>
+    </FrameLayout>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_delete"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:layout_gravity="center"
+        android:layout_marginBottom="24dp"
         android:text="@string/Delete"
+        android:textColor="@color/white"
         android:textSize="10dp"
-        app:cornerRadius="36dp"
-
+        android:translationY="-30dp"
+        android:visibility="visible"
         app:backgroundTint="@color/orang"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cornerRadius="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card" />
+        app:layout_constraintTop_toBottomOf="@+id/cardPhotossss" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
