--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="whiteBlue">#DDDFEFF1</color>
     <color name="greu">#00F5F8F8</color>
-    <color name="orang">#DD7272</color>
+    <color name="orang">#CE6666</color>
     <color name="whateGrey">#353737</color>
+    <color name="MyCollor">#E5E5E5</color>
+
 </resources>
