--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -146,7 +146,7 @@
         android:textColor="@color/white"
         android:textSize="10dp"
         android:translationY="-30dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:backgroundTint="@color/orang"
         app:cornerRadius="36dp"
         app:layout_constraintEnd_toEndOf="parent"
